Add discussion of small object optimization and allocators

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -42,9 +42,7 @@ will not propagate the `const`-ness to the indirect data (only to the pointer it
 The class template `indirect_value` is a drop-in replacement for pointer members in cases where data referenced by the pointer member is logically
 part of the class. Use of `indirect_value` will ensure that the compiler-generated special member functions behave correctly and that `const` is propagated to indirect data.
 
-### PImpl
-
-### Linked lists
+### Node-based containers
 
 ```~cpp
 class Node {
@@ -58,20 +56,50 @@ class Node {
 }; 
 ```
 
+### PImpl
+
 ### Hot-cold splitting
 
-## Should default constructed state be a null state?
+## Design decisions
+
+### Should there be be a null state?
 
 `optional<indirect_value<T>>` vs nullable `indirect_value<T>`
 
 nullable indirect value has performance benefits that optional<indirect_value> cannot gain.
 
-## Vocabulary - 'pointers' and 'values'
 
-## Allocators 
-Discuss why we do not support allocators. Copier and deleter can give us all we need that allocators can do.
+### Is there a small object optimization?
 
-For custom allocators we should guarantee that the allocator is used, for std::allocator we can use an SBO.
+A small object optimization is permissible for `indirect_value`. 
+A small buffer that is part of the `indirect_value` class can be used to store the owned object
+if it is small. We do not require that `indirect_value` is the same size as a raw pointer; 
+implementers are free, but not required, to add a small buffer optimization as a quality of 
+implementation improvement.
+
+It would be possible for the size of the small buffer to be specified as a template argument.
+Such a design would be inconsistent with the broader Standard Library design:
+ `std::string`, `std::any`, `std::function` all permit a small object optimization but do not 
+ let users specify the size of the buffer.
+
+
+## How are allocators supported?
+
+It may be desirable for users to control the way memory is managed by an instance of indirect_value.
+Classes such as `std::vector` and `std::string` enable this customisation by allowing an allocator 
+to be specified as template argument. 
+
+Like `std::unique_ptr`, `indirect_value` allows a deleter to be provided as a template argument 
+so that disposal of the owned object can be customized. `indirect_value` also allows copying to be be 
+customized by specifying a copier, another template argument.
+
+The in-place constructor of `indirect_value<T>` uses `new` to create an instance of `T` with the supplied 
+constructor argument. This constructor is disabled where the copier and deleter are not `default_copy` and 
+`default_delete`.
+
+Memory management for `indirect_value` can be fully controlled by specifying a copier and 
+deleter and using the pointer constructor `indirect_value(T* t, C c, D d)`.
+
 
 ## Motivation - a perfect PImpl
 In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the PImpl idiom was specialised [H. Sutter].  Almost three decades on since these ideas started circulating implementation of the PImpl idiom requires thought about implementation details around copying and to support this feature requires user intervention. 
@@ -281,7 +309,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
         indirect_value(indirect_value&& p) noexcept;
 
         template <class ...Ts>
-        indirect_value(std::in_place_t, Ts&&... ts);
+        indirect_value(std::in_place_t, Ts&&... ts);  // See below
 
         // Destructor
         ~indirect_value();
@@ -303,7 +331,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 
     // indirect_value creation
     template <class T, class ...Ts> indirect_value<T>
-    make_indirect_value(Ts&& ...ts);
+    make_indirect_value(Ts&& ...ts);  // See below
 
     // indirect_value specialized algorithms
     template<class T>
@@ -340,6 +368,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 <code>indirect_value(std::in_place_t, Ts&& ...ts);</code>
 * Effects: Constructs an `indirect_value` which owns an object of type `T` direct-non-list-initialized with `std::forward<Ts>(ts)...`
 * Throws: Any exception thrown by the selected constructor of `T` or `bad_alloc` if required storage cannot be obtained.
+* Requires `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
 
 ### X.Y.4 Class template `indirect_value` destructor [indirect_value.dtor]
 <code>~indirect_value();</code>
@@ -393,6 +422,7 @@ template <class T, class U=T, class ...Ts> indirect_value<T>
 * Constraints: `is_constructible_v<U, Ts...>` is true.
 * Expects: `U` meets the `Cpp17CopyConstructible` requirements.
 * Returns: A `indirect_value<T>` owning an object of type direct-non-list-initialized with `std::forward<Ts>(ts)...`.
+* Requires `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
 
 # Acknowledgements
 The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going support.
