Minor simplifications to discussion of allocators and SOO

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -85,9 +85,9 @@ Such a design would be inconsistent with the broader Standard Library design:
 
 ## How are allocators supported?
 
-It may be desirable for users to control the way memory is managed by an instance of indirect_value.
-Classes such as `std::vector` and `std::string` enable this customisation by allowing an allocator 
-to be specified as template argument. 
+It may be desirable for users to control the way memory is managed by an instance of a class.
+Classes such as `std::vector` and `std::string` allow an allocator to be specified as template argument
+to control memory management.
 
 Like `std::unique_ptr`, `indirect_value` allows a deleter to be provided as a template argument 
 so that disposal of the owned object can be customized. `indirect_value` also allows copying to be be 
@@ -97,7 +97,7 @@ The in-place constructor of `indirect_value<T>` uses `new` to create an instance
 constructor argument. This constructor is disabled where the copier and deleter are not `default_copy` and 
 `default_delete`.
 
-Memory management for `indirect_value` can be fully controlled by specifying a copier and 
+Memory management for `indirect_value` can be fully controlled by specifying a suitable copier and
 deleter and using the pointer constructor `indirect_value(T* t, C c, D d)`.
 
 
