Add note of existing referentations

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -178,7 +178,68 @@ Now the visible class has compiler-generated copy and move constructors, copy an
 ## Prior Art
 There have been previous proposal for deep-copying smart pointers that proposed copy semantics [W. Brown]. <code>cloned_ptr</code> was proposed in [J. Coe], however under guidance of LEWG this was renamed to <code>polymorphic_value</code>.  With this change in name came the addition of const propagation.
 
-This paper is not unique in these ideas. GitHub code search finds 602k lines of code referencing "PImpl" and 99 C++ repositories claiming to provide generic implementations of Pimpl.  Additionally other authors have addressed this topic [A. Upadyshev].
+This paper is not unique in these ideas. GitHub code search finds 602k lines of code referencing "PImpl" and 99 C
+++ repositories claiming to provide generic implementations of Pimpl.  Additionally other authors have addressed this
+ topic [A. Upadyshev].  Some generic implementations of note in the wild are:
+
+<table>
+<thead>
+<tr>
+<th>Project</th>
+<th>Link</th>
+<th>Deep Copying</th>
+<th>Const Propagation</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Boost Pimpl</td>
+<td>https://github.com/sean-/boost-pimpl</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
+<tr>
+<td>pimpl</td>
+<td>https://github.com/JonChesterfield/pimpl</td>
+<td>Yes</td>
+<td>No</td>
+</tr>
+<tr>
+<td>impl_ptr</td>
+<td>https://github.com/sth/impl_ptr</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
+<tr>
+<td>Simpl</td>
+<td>https://github.com/oliora/samples/blob/master/spimpl.h</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
+<tr>
+<td>smart_pimpl</td>
+<td>https://github.com/SBreezyx/smart_pimpl</td>
+<td>No</td>
+<td>No</td>
+</tr>
+<tr>
+<td>pimpl_on_stack</td>
+<td>https://github.com/kuznetsss/pimpl_on_stack/blob/master/include/pimpl_on_stack/pimpl_on_stack.h</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
+<tr>
+<td>deep_const_ptr</td>
+<td>https://github.com/torbjoernk/deep_const_ptr</td>
+<td>No</td>
+<td>Yes</td>
+</tr>
+</tbody>
+</table>
+
+Of the implementations listed, numerous bugs are apparent of which the authors appear unaware.  There are many
+ subtleties that implementor must be aware of to solve the use case.  Standardising a solution offers the
+  potential to solidify usage of best practice within the community.
 
 ## Completeness of T*
 Recommended practice for pointer-to-implementation of PImpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for `indirect_value`, the table outlines the expected behaviour for incomplete pointer types:
