Wording changes in discussion of other implementations

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -21,7 +21,7 @@ Add a class template, `indirect_value`, to the C++ Standard Library to support f
 # Introduction
 The class template, `indirect_value`, confers value-like semantics on a free-store-allocated object. An `indirect_value` may hold an object of a class T, copying the `indirect_value` will copy the object `T`, and `const`ness will propagate from the owning classes to the `indirect_value` type.
 
-## Motivating uses
+## Motivation
 
 It may be desirable for a class member to be an incomplete type or for the storage used by the member object to be separate from the class.
 In both such cases, the member would traditionally be represented as pointer:
@@ -237,9 +237,8 @@ This paper is not unique in these ideas. GitHub code search finds 602k lines of 
 </tbody>
 </table>
 
-Of the implementations listed, numerous bugs are apparent of which the authors appear unaware.  There are many
- subtleties that implementor must be aware of to solve the use case.  Standardising a solution offers the
-  potential to solidify usage of best practice within the community.
+Divergence on issues such as deep copying and const propagation along with subtleties in implementation
+mean that a single standardized solution would be of broad benefit to the community of C++ users.
 
 ## Completeness of T*
 Recommended practice for pointer-to-implementation of PImpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for `indirect_value`, the table outlines the expected behaviour for incomplete pointer types:
