Move PImpl section and add TODOs

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -44,12 +44,16 @@ part of the class. Use of `indirect_value` will ensure that the compiler-generat
 
 ### Node-based containers
 
+TODO(Pad out with discussion).
+
 ```~cpp
 class Node {
     int data_;
     Node* next_;
 }; 
+```
 
+```~cpp
 class Node {
     int data_;
     indirect_value<Node> next_;
@@ -58,50 +62,6 @@ class Node {
 
 ### PImpl
 
-### Hot-cold splitting
-
-## Design decisions
-
-### Should there be be a null state?
-
-`optional<indirect_value<T>>` vs nullable `indirect_value<T>`
-
-nullable indirect value has performance benefits that optional<indirect_value> cannot gain.
-
-
-### Is there a small object optimization?
-
-A small object optimization is permissible for `indirect_value`. 
-A small buffer that is part of the `indirect_value` class can be used to store the owned object
-if it is small. We do not require that `indirect_value` is the same size as a raw pointer; 
-implementers are free, but not required, to add a small buffer optimization as a quality of 
-implementation improvement.
-
-It would be possible for the size of the small buffer to be specified as a template argument.
-Such a design would be inconsistent with the broader Standard Library design:
- `std::string`, `std::any`, `std::function` all permit a small object optimization but do not 
- let users specify the size of the buffer.
-
-
-## How are allocators supported?
-
-It may be desirable for users to control the way memory is managed by an instance of a class.
-Classes such as `std::vector` and `std::string` allow an allocator to be specified as template argument
-to control memory management.
-
-Like `std::unique_ptr`, `indirect_value` allows a deleter to be provided as a template argument 
-so that disposal of the owned object can be customized. `indirect_value` also allows copying to be be 
-customized by specifying a copier, another template argument.
-
-The in-place constructor of `indirect_value<T>` uses `new` to create an instance of `T` with the supplied 
-constructor argument. This constructor is disabled where the copier and deleter are not `default_copy` and 
-`default_delete`.
-
-Memory management for `indirect_value` can be fully controlled by specifying a suitable copier and
-deleter and using the pointer constructor `indirect_value(T* t, C c, D d)`.
-
-
-## Motivation - a perfect PImpl
 In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the PImpl idiom was specialised [H. Sutter].  Almost three decades on since these ideas started circulating implementation of the PImpl idiom requires thought about implementation details around copying and to support this feature requires user intervention. 
 
 ```
@@ -173,7 +133,64 @@ widget& widget::operator=(const widget& rhs) = default;
 widget::~widget() = default;
 ```
 
-Now the visible class has compiler-generated copy and move constructors, copy and move assignment operators and destructor.  All of these compiler-generated functions will behave correctly.  
+### Hot-cold splitting
+
+TODO(Pad out with discussion).
+
+```~cpp
+class FastType {
+  Data frequently_accessed_data_;
+  IndirectData* infrequently_accessed_data_;
+};
+```
+
+```~cpp
+class FastType {
+  Data frequently_accessed_data_;
+  indirect_value<IndirectData> infrequently_accessed_data_;
+};
+```
+
+## Design decisions
+
+### Should there be be a null state?
+
+`optional<indirect_value<T>>` vs nullable `indirect_value<T>`
+
+nullable indirect value has performance benefits that optional<indirect_value> cannot gain.
+
+
+### Is there a small object optimization?
+
+A small object optimization is permissible for `indirect_value`. 
+A small buffer that is part of the `indirect_value` class can be used to store the owned object
+if it is small. We do not require that `indirect_value` is the same size as a raw pointer; 
+implementers are free, but not required, to add a small buffer optimization as a quality of 
+implementation improvement.
+
+It would be possible for the size of the small buffer to be specified as a template argument.
+Such a design would be inconsistent with the broader Standard Library design:
+ `std::string`, `std::any`, `std::function` all permit a small object optimization but do not 
+ let users specify the size of the buffer.
+
+
+## How are allocators supported?
+
+It may be desirable for users to control the way memory is managed by an instance of a class.
+Classes such as `std::vector` and `std::string` allow an allocator to be specified as template argument
+to control memory management.
+
+Like `std::unique_ptr`, `indirect_value` allows a deleter to be provided as a template argument 
+so that disposal of the owned object can be customized. `indirect_value` also allows copying to be be 
+customized by specifying a copier, another template argument.
+
+The in-place constructor of `indirect_value<T>` uses `new` to create an instance of `T` with the supplied 
+constructor argument. This constructor is disabled where the copier and deleter are not `default_copy` and 
+`default_delete`.
+
+Memory management for `indirect_value` can be fully controlled by specifying a suitable copier and
+deleter and using the pointer constructor `indirect_value(T* t, C c, D d)`.
+
 
 ## Prior Art
 There have been previous proposal for deep-copying smart pointers that proposed copy semantics [W. Brown]. <code>cloned_ptr</code> was proposed in [J. Coe], however under guidance of LEWG this was renamed to <code>polymorphic_value</code>.  With this change in name came the addition of const propagation.
