--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -60,7 +60,7 @@ class Node {
 }; 
 ```
 
-### PImp
+### PImpl
 
 In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the PImpl idiom was specialised [H. Sutter].  Almost three decades on since these ideas started circulating implementation of the PImpl idiom requires thought about implementation details around copying and to support this feature requires user intervention. 
 
@@ -279,6 +279,7 @@ This paper is not unique in these ideas. GitHub code search finds 602k lines of 
 </tr>
 <tr>
 <td>pimpl_on_stack</td>
+<td>https://github.com/kuznetsss/pimpl_on_stack/</td>
 <td>Yes</td>
 <td>Yes</td>
 </tr>
