Twon prague edits mon (#46)
* Readme correction

* Add discussion of small object optimization and allocators

* Add note of existing referentations

* Cut link size down

* Design decisions

* Minor corretion

Co-authored-by: Jonathan B Coe <jonathanbcoe@gmail.com>

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -155,6 +155,44 @@ class FastType {
 
 ### Should there be be a null state?
 
+There is a design decision to be made about the default constructor
+of indirect_value. It could place indirect_value in an empty state
+with no owned object or it could default construct an owned object
+so that indirect_value is never empty.
+
+If `indirect_value<T>` is never empty then `T` must be default
+constructible for `indirect_value<T>` to be a regular type.
+The default constructor of `indirect_value<T>` would then need to allocate
+memory, which cannot be controlled by the user-supplied copier or deleter.
+
+If the default constructed state of indirect_value is non-empty then the moved from
+state should be similarly non-empty. This requires that `T` is noexcept move constructible.
+
+Allowing an empty state for `indirect_value<T>` imposes preconditions on operator* and operator->
+(similar to those of the raw pointer it may be replacing) but removes requirements on `T` and the need
+to allocate memory. 
+
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+
+Initialising `indirect_value` to a non-empty state upon construction would incur unfortunate side
+  effects:
+  - This would places a requirement that the underlying type is default constructable.
+  - The default constructor would have to allocate, making default construction of `indirect_value` expensive.
+  - Because allocations takes place, and can fail, the constructor could not now be marked as `noexcept`.
+
+These costs would mean that `indirect_value` would always be in a non-empty state.  This removes the requirement on
+pre-conditions on observable methods to avoid undefined behaviour.  The costs of a lack of null state could be
+avoided by way of `optional<indirect_value<T>>`. This could be taken further to offer a specialisation of `optional`
+for `indirect_value` that used the internal pointer of `indirect_value` to determine the optional status, thus
+providing the null state at no additional memory cost.  However specialisation with in the Standard library have a
+ poor history.
+
+
+ 
+ 
+The design of `indirect_value` is impacted by how null state is represented.
+
 `optional<indirect_value<T>>` vs nullable `indirect_value<T>`
 
 nullable indirect value has performance benefits that optional<indirect_value> cannot gain.
@@ -241,7 +279,7 @@ This paper is not unique in these ideas. GitHub code search finds 602k lines of 
 </tr>
 <tr>
 <td>pimpl_on_stack</td>
-<td>https://github.com/kuznetsss/pimpl_on_stack/blob/master/include/pimpl_on_stack/pimpl_on_stack.h</td>
+<td>https://github.com/kuznetsss/pimpl_on_stack/</td>
 <td>Yes</td>
 <td>Yes</td>
 </tr>
