Discuss empty state and optional

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -153,7 +153,7 @@ class FastType {
 
 ## Design decisions
 
-### Should there be be a null state?
+### Should there be be an empty state?
 
 There is a design decision to be made about the default constructor
 of indirect_value. It could place indirect_value in an empty state
@@ -172,30 +172,13 @@ Allowing an empty state for `indirect_value<T>` imposes preconditions on operato
 (similar to those of the raw pointer it may be replacing) but removes requirements on `T` and the need
 to allocate memory. 
 
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+A nullable `indirect_value<T>` could be mimicked with `std::optional<indirect_value<T>>` but this is verbose,
+does not solve the problem of `T` needing to be noexcept move-constructible and would require
+partial template specialization of `std::optional` to avoid overhead that would not be incurred by a 
+nullable `indirect_value`.
 
-
-Initialising `indirect_value` to a non-empty state upon construction would incur unfortunate side
-  effects:
-  - This would places a requirement that the underlying type is default constructable.
-  - The default constructor would have to allocate, making default construction of `indirect_value` expensive.
-  - Because allocations takes place, and can fail, the constructor could not now be marked as `noexcept`.
-
-These costs would mean that `indirect_value` would always be in a non-empty state.  This removes the requirement on
-pre-conditions on observable methods to avoid undefined behaviour.  The costs of a lack of null state could be
-avoided by way of `optional<indirect_value<T>>`. This could be taken further to offer a specialisation of `optional`
-for `indirect_value` that used the internal pointer of `indirect_value` to determine the optional status, thus
-providing the null state at no additional memory cost.  However specialisation with in the Standard library have a
- poor history.
-
-
- 
- 
-The design of `indirect_value` is impacted by how null state is represented.
-
-`optional<indirect_value<T>>` vs nullable `indirect_value<T>`
-
-nullable indirect value has performance benefits that optional<indirect_value> cannot gain.
+As designed, `indirect_value` has an empty state where it owns no object. 
+A default constructed `indirect_value` is empty and the empty state is the state of a moved-from object.
 
 
 ### Is there a small object optimization?
