Add node-based container example

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -44,21 +44,49 @@ part of the class. Use of `indirect_value` will ensure that the compiler-generat
 
 ### Node-based containers
 
-TODO(Pad out with discussion).
+A tree or linked list can be implemented as a node-based container. This gives stable references to data in the nodes
+at the cost of memory indirection when accessing data. 
+Nodes would typically contain data and pointer(s) to other nodes so that the list or tree can be navigated. 
+
+For example:
 
 ```~cpp
-class Node {
+class ForwardListNode {
     int data_;
-    Node* next_;
+    ForwardListNode* next_;
 }; 
+
+class ForwardList {
+    std::unique_ptr<ForwardListNode> head_;
+public:
+    // ...
+};
 ```
 
+The special member functions of `ForwardList` would need to be user-implemented as the compiler 
+generated ones would not copy, move or delete the nodes correctly. 
+
+Care must be taken when implementing `const`-qualified member functions as `const` will not propagate down
+from the `ForwardList` to the `ForwardListNode`s nor to the data that the nodes contain.
+
+Implementing the ForwardList and ForwardListNode with indirect_value corrects these issues:
+
 ```~cpp
-class Node {
+class ForwardListNode {
     int data_;
-    indirect_value<Node> next_;
+    indirect_value<ForwardListNode> next_;
 }; 
+
+class ForwardList {
+    indirect_value<ForwardListNode> head_;
+public:
+    // ...
+};
 ```
+
+Compiler-generated special member functions will behave correctly and do not need to be written manually.
+`const`-propagation will allow the compiler to ensure that data that is logically part of the container
+cannot be modified through a `const` access path.
 
 ### PImpl
 
