Add comparison table for polymorphic_value and unique_ptr

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -223,7 +223,7 @@ Such a design would be inconsistent with the broader Standard Library design:
  let users specify the size of the buffer.
 
 
-## How are allocators supported?
+### How are allocators supported?
 
 It may be desirable for users to control the way memory is managed by an instance of a class.
 Classes such as `std::vector` and `std::string` allow an allocator to be specified as template argument
@@ -380,6 +380,52 @@ Recommended practice for pointer-to-implementation of PImpl classes since C++11 
 </tr>
 </tbody>
 </table>
+
+
+## Comparison with `unique_ptr<T>` and `polymorphic_value<T>`
+
+The class template `indirect_value<T>` is in many respects similar to `unique_ptr<T>` and the proposed 
+`polymorphic_value<T>` [J. Coe]. The table below highlights the similarities and differences:
+
+<table>
+<thead>
+<tr>
+<th>Aspect</th>
+<th><code>indirect_value</code></th>
+<th><code>polymorphic_value</code></th>
+<th><code>unique_ptr</code></th>
+</tr>
+<tr>
+<td>Default constructed state</td>
+<td>Empty</td>
+<td>Empty</td>
+<td>Empty</td>
+</tr>
+<tr>
+<td>Copyable</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>No</td>
+</tr>
+<tr>
+<td>Const-propagating</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>No</td>
+</tr>
+<tr>
+<td>Polymorphic</td>
+<td>No</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
+<tr>
+<td>Customizable memory access</td>
+<td>Yes</td>
+<td>No</td>
+<td>Yes</td>
+</tr>
+
 
 ## Impact on the standard
 This proposal is a pure library extension. It requires additions to be made to the standard library header `<memory>`.
