--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -390,11 +390,12 @@ The class template `indirect_value<T>` is in many respects similar to `unique_pt
 <table>
 <thead>
 <tr>
-<th>Aspect</th>
+<th>Behaviour</th>
 <th><code>indirect_value</code></th>
 <th><code>polymorphic_value</code></th>
 <th><code>unique_ptr</code></th>
 </tr>
+</thead>
 <tr>
 <td>Default constructed state</td>
 <td>Empty</td>
@@ -425,7 +426,7 @@ The class template `indirect_value<T>` is in many respects similar to `unique_pt
 <td>No</td>
 <td>Yes</td>
 </tr>
-
+</table>
 
 ## Impact on the standard
 This proposal is a pure library extension. It requires additions to be made to the standard library header `<memory>`.
