Add Hot/Cold splitting example

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -88,6 +88,49 @@ Compiler-generated special member functions will behave correctly and do not nee
 `const`-propagation will allow the compiler to ensure that data that is logically part of the container
 cannot be modified through a `const` access path.
 
+### Hot-cold splitting
+
+When working with collections of data, CPU caches are often under utilised when algorithms access certain data-members
+much more frequently than others.  This results in some cache lines becoming busier than others, prefetchers
+preemptively caching memory which is later evicted with out being used by the CPU or memory bandwidth becoming a
+limiting factor in performance.  In such cases segregating data structures in terms of hot and cold data can remove
+ pressure on system resources.
+
+```~cpp
+class Element {
+  SmallData frequently_accessed_data;
+  LargeData infrequently_accessed_data;
+};
+
+vector<Element> elements;
+auto active = find(elements.begin(), 
+                   elements.end(), 
+                   [](const auto& e) 
+                   { 
+                     e.frequently_accessed_data.active();
+                   }
+```
+
+In such cases adding a level of indirection to the larger less frequently accessed data can relieve bandwidth
+ pressure [C. Ericson].  Using `indirect_value` in this refactoring does not change guarantees around constness as
+usage of a pointer like type would. Additionally compiler-generated special member functions will behave correctly
+ and do not need to be re-written post refactoring.
+
+```~cpp
+class Element {
+  SmallData frequently_accessed_data;
+  indirect_value<LargeData> infrequently_accessed_data;
+};
+
+vector<Element> elements;
+auto active = find(elements.begin(), 
+                   elements.end(), 
+                   [](const auto& e) 
+                   { 
+                     e.frequently_accessed_data.active();
+                   }
+```
+
 ### PImpl
 
 In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the PImpl idiom was specialised [H. Sutter].  Almost three decades on since these ideas started circulating implementation of the PImpl idiom requires thought about implementation details around copying and to support this feature requires user intervention. 
@@ -159,24 +202,6 @@ widget::widget(const widget& rhs) = default;
 widget& widget::operator=(widget&& rhs) noexcept = default;
 widget& widget::operator=(const widget& rhs) = default;
 widget::~widget() = default;
-```
-
-### Hot-cold splitting
-
-TODO(Pad out with discussion).
-
-```~cpp
-class FastType {
-  Data frequently_accessed_data_;
-  IndirectData* infrequently_accessed_data_;
-};
-```
-
-```~cpp
-class FastType {
-  Data frequently_accessed_data_;
-  indirect_value<IndirectData> infrequently_accessed_data_;
-};
 ```
 
 ## Design decisions
@@ -605,6 +630,8 @@ The authors would like to thank Thomas Russell, and Andrew Bennieston for useful
 [J. Coe] [p0201r3: A polymorphic value-type for C++](http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0201r3.pdf)
 
 [J. Coplien] Advanced C++ Programming Styles and Idioms (Addison-Wesley), James O. Coplien, 1992
+
+[C. Ericson] [Memory Optimization, Christer Ericson, Games Developers Conference, 2003](http://realtimecollisiondetection.net/pubs/GDC03_Ericson_Memory_Optimization.ppt)
 
 [A. Upadyshev] [PIMPL, Rule of Zero and Scott Meyers, Andrey Upadyshev, 2015](http://oliora.github.io/2015/12/29/pimpl-and-rule-of-zero.html)
 
