Update paper number

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -1,10 +1,10 @@
 <pre class='metadata'>
 Title:  <code>indirect_value</code>: A Free-Store-Allocated Value Type For C++
-Shortname: P1950
-URL: wg21.link/P1950r0
-Revision: 0
+Shortname: D1950
+URL: wg21.link/D1950r1
+Revision: 1
 Audience: LEWGI
-Status: P
+Status: D
 Group: WG21
 Issue Tracking: GitHub https://github.com/jbcoe/indirect_value/issues
 !Source: <a href="https://github.com/jbcoe/indirect_value/documentation/p1950.md">github.com/jbcoe/indirect_value/documentation/p1950.md</a>
