Assorted minor wording tweaks

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -18,11 +18,12 @@ Editor: Antony Peacock, ant.peacock@gmail.com
 Add a class template, `indirect_value`, to the C++ Standard Library to support free-store-allocated objects with value-like semantics.
 
 # Introduction
-The class template, `indirect_value`, confers value-like semantics on a free-store-allocated object. An `indirect_value` may hold an object of a class T, copying the `indirect_value` will copy the object `T`, and `const`ness will propagate from the owning classes to the `indirect_value` type.
+The class template, `indirect_value`, confers value-like semantics on a free-store-allocated object. An `indirect_value` may hold an object of a class T, copying the `indirect_value` will copy the object `T`. When a parent object contains a member of type `indirect_value<T>` and
+is accessed through a const access path,  `const`ness will propagate from the parent object to the instance of `T` owned by the `indirect_value` member.
 
 ## Motivation
 
-It may be desirable for a class member to be an incomplete type or for the storage used by the member object to be separate from the class.
+It may be desirable for a class member to be an incomplete type or for the storage used by a member object to be separate from the class itself.
 In both such cases, the member would traditionally be represented as pointer:
 
 ```
@@ -38,16 +39,16 @@ not function correctly (indirect data will not be copied, assigned to or deleted
 Special care will be needed when using the class in multithreaded environments. An instance of `MyClass` accessed through a const-access-path
 will not propagate the `const`-ness to the indirect data (only to the pointer itself) as pointers do not propagate `const` to their pointees.
 
-The class template `indirect_value` is a drop-in replacement for pointer members in cases where data referenced by the pointer member is logically
-part of the class. Use of `indirect_value` will ensure that the compiler-generated special member functions behave correctly and that `const` is propagated to indirect data.
+The class template `indirect_value` is a drop-in replacement for pointer members in cases where non-polymorphic data referenced by the 
+pointer member is logically part of the class. Use of `indirect_value` will ensure that the compiler-generated special member functions 
+behave correctly and that `const` is propagated to indirect data.
 
 ### Node-based containers
 
 A tree or linked list can be implemented as a node-based container. This gives stable references to data in the nodes
 at the cost of memory indirection when accessing data. 
-Nodes would typically contain data and pointer(s) to other nodes so that the list or tree can be navigated. 
 
-For example:
+Nodes would typically contain data and pointer(s) to other nodes so that the list or tree can be navigated:
 
 ```~cpp
 class ForwardListNode {
@@ -56,19 +57,19 @@ class ForwardListNode {
 }; 
 
 class ForwardList {
-    std::unique_ptr<ForwardListNode> head_;
+    ForwardListNode* head_;
 public:
     // ...
 };
 ```
 
 The special member functions of `ForwardList` would need to be user-implemented as the compiler 
-generated ones would not copy, move or delete the nodes correctly. 
+generated versions would not copy, move or delete the nodes correctly. 
 
 Care must be taken when implementing `const`-qualified member functions as `const` will not propagate down
 from the `ForwardList` to the `ForwardListNode`s nor to the data that the nodes contain.
 
-Implementing the ForwardList and ForwardListNode with indirect_value corrects these issues:
+Implementing the ForwardList and ForwardListNode with `indirect_value` corrects these issues:
 
 ```~cpp
 class ForwardListNode {
@@ -111,9 +112,9 @@ auto active = find(elements.begin(),
 ```
 
 In such cases adding a level of indirection to the larger less frequently accessed data can relieve bandwidth
- pressure [C. Ericson].  Using `indirect_value` in this refactoring does not change guarantees around constness as
-usage of a pointer like type would. Additionally compiler-generated special member functions will behave correctly
- and do not need to be re-written post refactoring.
+ pressure [C. Ericson].  Using `indirect_value` in this refactoring does not change guarantees around `const`ness as
+usage of a raw pointer or `unique_ptr` would. Additionally, compiler-generated special member functions will behave correctly
+ and do not need to be manually implemented.
 
 ```~cpp
 class Element {
@@ -155,25 +156,20 @@ widget::~widget() = default;
 ```
 For convenience, the widget class will be referred to as the “visible class” and impl class the “<code>PImpl</code> class”. Note, semantically the <code>PImpl</code> class is the implementation details of the visible class.
 
-### Issues with `unique_ptr<impl>` implementation of PImpl Idiom
 #### const-propagation
-
 Using <code>std::unique_ptr</code> to store the implementation object introduces an issue - within a `const`-qualified
  member function, an instance of the visible class can mutate data inside the implementation object.  This is because <code>const</code> qualification applies only to the `unique_ptr` value, and not the pointed-to-object.  
 
-The compiler is unable to give thread-compatibility guarantees for `const` objects when `const` is not propagate: `const` does not mean immutable in the face of pointer-like-member data.
+The compiler is unable to give thread-compatibility guarantees for `const` objects when `const` does not propagate: `const` does not mean immutable in the face of pointer-like-member data.
 
-The desired semantics of a PImpl-owner are value-like, like those of `std::optional` which has appropriate `const` and non-`const`-qualified overloads for `operator*` and `operator->`. 
+The desired semantics of a PImpl-owner are value-like, like those of `std::optional` which has appropriate `const` and non-`const`-qualified overloads for `operator*` and `operator->`.  
 
 #### copies
 The copy-constructor and copy-assignment operator of `std::unique_ptr` are deleted. Users of a class with a `std::unique_ptr` member will be required to implement copy-construction and copy-assignment.  Implementation of these methods for a class with PImpl members is non-trivial [S. Meyers].
 
-### Issues with `polymorphic_value<impl>` implementation of PImpl Idiom
-The class template `polymorphic_value` confers value-like semantics on a free-store-allocated object. This satisfies our requirement for const-propagation and a compiler generated copy constructor and copy assignment operator but incurs an additional cost in supporting polymorphism.
-To implement deep copies of subclasses, `polymorphic_value` employs type-erasure which has run-time cost due to virtual dispatch and memory indirection. We do not need to support polymorphism for our PImpl object and should not pay for what we do not use.
-
-### Perfect Implementation of the PImpl Idiom
-Like `polymorphic_value`, `indirect_value` confers value-like semantics on a free-store-allocated object. Unlike `polymorphic_value`, `indirect_value` does not support polymorphism - `indirect_value<T>` is either empty or contains an object of type `T`.
+### An `indirect_value` implementation of the PImpl Idiom
+Using `indirect_value` to implement the PImpl idiom ensures that the PImpl object is `const` when accessed through a `const`
+access path and that compiler-generated special member functions will behave correctly and do not need to be manually implemented.
 
 ```
 // Header file
